force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Comments__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Comments__c</fullName>
    <description>An optional field recording the latest business process comments about this Transaction. Max 255 characters.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>