force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Creation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Creation_DateTime__c</fullName>
    <description>This optional field displays the Date and Time of when the vendor&apos;s record was created.</description>
    <inlineHelpText>This optional field displays the Date and Time of when the vendor&apos;s record was created.</inlineHelpText>
    <label>Creation DateTime</label>
    <type>DateTime</type>
</CustomField>