force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Sent_Time__c</fullName>
    <description>Date/Time that the request message was sent to the middleware.</description>
    <label>SentTime</label>
    <type>DateTime</type>
</CustomField>